--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Mohammad Ali Shuvo",
   "license": "ISC",
   "dependencies": {
-    "parcel": "^2.0.0-rc.0"
+    "parcel": "^2.0.0-rc.0",
+    "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
     "@parcel/transformer-image": "^2.0.0-rc.0",
