--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Mohammad Ali Shuvo",
   "license": "ISC",
   "dependencies": {
-    "fractional": "^1.0.0",
+    "fraction.js": "^4.1.1",
     "parcel": "^2.0.0-rc.0",
     "regenerator-runtime": "^0.13.9"
   },
